Adding more tests to the suite; fixed a bug in the Color implementation

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,11 +1,14 @@
 TESTS = bitmap_test color_test
 
 CPP = c++
-CXXFLAGS = -lgtest
+CXXFLAGS = -g -lgtest -fprofile-arcs -ftest-coverage
 
 tests: bitmap_test color_test
 	unittest/bitmap_test
 	unittest/color_test
+
+test_clean:
+	rm -f unittest/bitmap_test unittest/color_test
 
 bitmap_test: unittest/bitmap_test.cpp graphics/bitmap.hpp graphics/bitmap.cxx graphics/color.hpp graphics/color.cxx
 	$(CPP) $(CXXFLAGS) -o unittest/bitmap_test unittest/bitmap_test.cpp graphics/bitmap.cxx graphics/color.cxx
