Added more tests for Vector3; fixed formatting (indentation) in Vector3 implementation; removed Ray3d dependency on "header.hpp"; removed warning about casts from Bitmap->SaveAsTGA().

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,4 +1,4 @@
-TESTS = bitmap_test color_test vector3_test
+TESTS = bitmap_test color_test vector3_test ray3d_test
 
 CPP = c++
 CXXFLAGS = -g -lgtest -Wall -pedantic 
@@ -7,6 +7,7 @@ tests: $(TESTS)
 	unittest/bitmap_test
 	unittest/color_test
 	unittest/vector3_test
+	unittest/ray3d_test
 
 test_clean:
 	rm -f unittest/{$(TESTS)}
@@ -19,3 +20,6 @@ color_test: unittest/color_test.cpp graphics/color.hpp graphics/color.cxx
 
 vector3_test: unittest/vector3_test.cpp math/vector3.hpp math/vector3.cxx
 	$(CPP) $(CXXFLAGS) -o unittest/vector3_test unittest/vector3_test.cpp math/vector3.cxx
+
+ray3d_test: unittest/ray3d_test.cpp math/vector3.hpp math/vector3.cxx math/ray3d.hpp math/ray3d.cxx
+	$(CPP) $(CXXFLAGS) -o unittest/ray3d_test unittest/ray3d_test.cpp math/vector3.cxx math/ray3d.cxx
