Decreased compile time by reusing object files for the unittests rather than recompiling everything for the tests

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,4 +1,4 @@
-TESTS = bitmap_test color_test vector3_test ray3d_test
+TESTS = unittest/bitmap_test unittest/color_test unittest/vector3_test unittest/ray3d_test
 
 CPP = c++
 CXXFLAGS = -g -lgtest -Wall -pedantic -ansi -Warray-bounds -Wclobbered -Wconversion -Wdeprecated -Weffc++ -Wenum-compare -Wextra -Wreorder -Wold-style-cast -Wabi
@@ -10,16 +10,16 @@ tests: $(TESTS)
 	unittest/ray3d_test
 
 test_clean:
-	rm -f unittest/{$(TESTS)}
+	rm -f $(TESTS)
 
-bitmap_test: unittest/bitmap_test.cpp graphics/bitmap.hpp graphics/bitmap.cxx graphics/color.hpp graphics/color.cxx
+unittest/bitmap_test: unittest/bitmap_test.cpp graphics/bitmap.o graphics/color.o
 	$(CPP) $(CXXFLAGS) -o unittest/bitmap_test unittest/bitmap_test.cpp graphics/bitmap.cxx graphics/color.cxx
 
-color_test: unittest/color_test.cpp graphics/color.hpp graphics/color.cxx
-	$(CPP) $(CXXFLAGS) -o unittest/color_test unittest/color_test.cpp graphics/color.cxx
+unittest/color_test: unittest/color_test.cpp graphics/color.o
+	$(CPP) $(CXXFLAGS) -o unittest/color_test unittest/color_test.cpp graphics/color.o
 
-vector3_test: unittest/vector3_test.cpp math/vector3.hpp math/vector3.cxx
-	$(CPP) $(CXXFLAGS) -o unittest/vector3_test unittest/vector3_test.cpp math/vector3.cxx
+unittest/vector3_test: unittest/vector3_test.cpp math/vector3.o
+	$(CPP) $(CXXFLAGS) -o unittest/vector3_test unittest/vector3_test.cpp math/vector3.o
 
-ray3d_test: unittest/ray3d_test.cpp math/vector3.hpp math/vector3.cxx math/ray3d.hpp math/ray3d.cxx
-	$(CPP) $(CXXFLAGS) -o unittest/ray3d_test unittest/ray3d_test.cpp math/vector3.cxx math/ray3d.cxx
+unittest/ray3d_test: unittest/ray3d_test.cpp math/vector3.o math/ray3d.o
+	$(CPP) $(CXXFLAGS) -o unittest/ray3d_test unittest/ray3d_test.cpp math/vector3.o math/ray3d.o
